gcc/testsuite/gfortran.dg/class_33.f90
@@ -1,0 +1,13 @@
+! { dg-do compile }
+!
+! PR 46971: [4.6 Regression] [OOP] ICE on long class names
+!
+! Contributed by Andrew Benson <abenson@its.caltech.edu>
+
+module Molecular_Abundances_Structure
+  type molecularAbundancesStructure
+  end type
+  class(molecularAbundancesStructure), pointer :: molecules
+end module
+
+! { dg-final { cleanup-modules "Molecular_Abundances_Structure" } }
